collect tour mobile letter spacing fix

--- a/src/sass/blocks/collect-tour.sass
+++ b/src/sass/blocks/collect-tour.sass
@@ -209,7 +209,7 @@
 
         &__checkbox-label
             padding-left:11px
-            letter-spacing: -0.005em
+            letter-spacing: -0.003em
         
         &__textarea
             height: 132px
